--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
         <nav>
             <ul>
                 <li><a href="#home">Strona Główna</a></li>
-                <li><a href="#about">O Mnie / Usługi</a></li>
+                <li><a href="#about">O Mnie</a></li>
                 <li><a href="#contact">Kontakt</a></li>
+                <li><a href="#dodatki">Dodatki</a></li>
             </ul>
         </nav>
     </header>
@@ -169,10 +170,20 @@
         </form>
         <p style="margin-top: 15px; font-size: 0.9em;">*Uwaga: Ten formularz nie działa bez dodatkowego kodu po stronie serwera (backendu).</p>
     </section>
+    <section id="dodatki">
+        <h2>Dodatki</h2>
+        <p>Przeglądnij pliki i linki, które dla Ciebie przygotowałem</p>
+        <ul>
+            <li>https://psychodem-lab.github.io/oddech</li>
+        </ul>
+    </section>
 
+
+    
     <footer>
-        <p>&copy; 2025 Moja Prosta Wizytówka</p>
+        <p>&oryginal; 2025 Psychodem</p>
     </footer>
 
 </body>
 </html>
+
