--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         <h2>Dodatki</h2>
         <p>Przeglądnij pliki i linki, które dla Ciebie przygotowałem</p>
         <ul>
+            <a href="https://psychodem-lab.github.io/oddech">Trening oddechowy</a>
             <li>https://psychodem-lab.github.io/oddech</li>
         </ul>
     </section>
@@ -186,4 +187,5 @@
 
 </body>
 </html>
+
 
