--- a/index.html
+++ b/index.html
@@ -161,12 +161,13 @@
 
     <section id="contact" class="contact-form">
         <h2>Skontaktuj się ze mną</h2>
-        <p>Wyślij do mnie wiadomość lub zadzwoń pod numer: **123 456 789**.</p>
+        <p>Wyślij do mnie wiadomość pod numer: **791 788 947**.</p>
         <form>
-            <input type="text" placeholder="Imię" required>
-            <input type="email" placeholder="Adres E-mail" required>
-            <textarea placeholder="Twoja Wiadomość" rows="5" required></textarea>
-            <button type="submit">Wyślij</button>
+         <form action="mailto:psychologdemenczuk@gmail.com" method="post" enctype="text/plain">
+    <input type="text" name="Imię" placeholder="Twoje imię"><br>
+    <textarea name="Wiadomość" placeholder="Wpisz wiadomość..."></textarea><br>
+    
+    <button type="submit">Wyślij E-mail</button>
         </form>
         <p style="margin-top: 15px; font-size: 0.9em;">*Uwaga: Ten formularz nie działa bez dodatkowego kodu po stronie serwera (backendu).</p>
     </section>
@@ -174,18 +175,20 @@
         <h2>Dodatki</h2>
         <p>Przeglądnij pliki i linki, które dla Ciebie przygotowałem</p>
         <ul>
+            <li>LINKI:</li>
             <a href="https://psychodem-lab.github.io/oddech">Trening oddechowy</a>
-            <li>https://psychodem-lab.github.io/oddech</li>
+           <a href="https://psychodem-lab.github.io/test">Trójczynnikowy test miłości</a>
         </ul>
     </section>
 
 
     
     <footer>
-        <p>&oryginal; 2025 Psychodem</p>
+        <p>&original; 2025 Psychodem</p>
     </footer>
 
 </body>
 </html>
+
 
 
