--- a/index.html
+++ b/index.html
@@ -184,11 +184,12 @@
 
     
     <footer>
-        <p>&original; 2025 Psychodem</p>
+        <p>&reg; 2025 Psychodem</p>
     </footer>
 
 </body>
 </html>
+
 
 
 
