--- a/index.html
+++ b/index.html
@@ -162,13 +162,8 @@
     <section id="contact" class="contact-form">
         <h2>Skontaktuj się ze mną</h2>
         <p>Wyślij do mnie wiadomość pod numer: **791 788 947**.</p>
-        <form>
-         <form action="mailto:psychologdemenczuk@gmail.com" method="post" enctype="text/plain">
-    <input type="text" name="Imię" placeholder="Twoje imię"><br>
-    <textarea name="Wiadomość" placeholder="Wpisz wiadomość..."></textarea><br>
+        
     
-    <button type="submit">Wyślij E-mail</button>
-        </form>
         <p style="margin-top: 15px; font-size: 0.9em;">*Uwaga: Ten formularz nie działa bez dodatkowego kodu po stronie serwera (backendu).</p>
     </section>
     <section id="dodatki">
@@ -176,8 +171,8 @@
         <p>Przeglądnij pliki i linki, które dla Ciebie przygotowałem</p>
         <ul>
             <li>LINKI:</li>
-            <a href="https://psychodem-lab.github.io/oddech">Trening oddechowy</a>
-           <a href="https://psychodem-lab.github.io/test">Trójczynnikowy test miłości</a>
+            <a href="https://psychodem-lab.github.io/oddech">Trening oddechowy</a><br>
+           <a href="https://psychodem-lab.github.io/test">Trójczynnikowy test miłości</a><br>
         </ul>
     </section>
 
@@ -189,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
