--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         <p>Przeglądnij pliki i linki, które dla Ciebie przygotowałem</p>
         <ul>
             <li>LINKI:</li>
-            <a href="https://psychodem-lab.github.io/oddech">Trening oddechowy</a><br>
-           <a href="https://psychodem-lab.github.io/test">Trójczynnikowy test miłości</a><br>
+            <p><a href="https://psychodem-lab.github.io/oddech "target="_blank" rel="noopener noreferrer" >Trening oddechowy</a></pr>
+           <p><a href="https://psychodem-lab.github.io/test "target="_blank" rel="noopener noreferrer" >Trójczynnikowy test miłości</a></pr>
         </ul>
     </section>
 
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
