--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Strona Główna</a></li>
-                <li><a href="#about">O Mnie</a></li>
+                <li><a href="#home">Główna</a></li>
+                <li><a href="#about">O mnie</a></li>
                 <li><a href="#contact">Kontakt</a></li>
                 <li><a href="#dodatki">Dodatki</a></li>
+                <li><a href="blog.html">Ciekawostki</a></li>
             </ul>
         </nav>
     </header>
@@ -184,6 +185,7 @@
 
 </body>
 </html>
+
 
 
 
