--- a/blog.html
+++ b/blog.html
@@ -147,7 +147,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Moja Prosta Wizytówka</p>
+        <p>&reg; 2025 Psychodem</p>
     </footer>
 
 </body>
