--- a/blog.html
+++ b/blog.html
@@ -124,6 +124,10 @@
         ---
 
         <article class="blog-post">
+            <figure>
+    <img src="hert.jpg" alt="Opis obrazka (ważny dla dostępności)" width="400">
+    <figcaption>To jest podpis pod obrazkiem, opisujący jego zawartość.</figcaption>
+</figure>
             <h3>Tytuł Wpisu 1: Jak zacząć z XYZ</h3>
             <p class="meta">Opublikowano: 24 Listopada 2025 | Kategoria: Porady</p>
             <p>To jest krótki fragment tekstu wprowadzającego. Opisuje, o czym jest artykuł i zachęca do dalszego czytania...</p>
