--- a/blog.html
+++ b/blog.html
@@ -125,7 +125,7 @@
 
         <article class="blog-post">
             <figure>
-    <img src="hert.jpg" alt="Opis obrazka (ważny dla dostępności)" width="400">
+    <img src="heart.png" alt="Opis obrazka (ważny dla dostępności)" width="400">
     <figcaption>To jest podpis pod obrazkiem, opisujący jego zawartość.</figcaption>
 </figure>
             <h3>Tytuł Wpisu 1: Jak zacząć z XYZ</h3>
