--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Prosta Wizytówka (Jeden Plik)</title>
-    
+        <link rel="shortcut icon" type="image/png" href="heart.png" />
     <style>
         /* Właściwość zapewniająca płynne przewijanie po kliknięciu w linki z kotwicą (#) */
         html {
@@ -185,6 +185,7 @@
 
 </body>
 </html>
+
 
 
 
