--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Moja Prosta Wizytówka</title>
-    
+        <link rel="shortcut icon" type="image/png" href="heart.png" />
     <style>
         /* Wklej tutaj CAŁY kod CSS, który wcześniej stworzyliśmy */
         html {
