--- a/index.html
+++ b/index.html
@@ -145,8 +145,12 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Witaj na mojej stronie!</h1>
+       <div class="image-with-text">
+    <img src="logomale.jpg" alt="Opis obrazka" width="150">
+    <h1>Witaj na mojej stronie!</h1>
         <p>Jestem [Twoje Imię/Nazwisko], [Twój Zawód/Usługa].</p>
+</div>
+        
         <a href="#contact" class="button">Skontaktuj się</a>
     </section>
 
@@ -185,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
