--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <section id="home" class="hero">
        <div class="image-with-text">
-    <img src="logomale.jpg" alt="Opis obrazka" width="150">
+    <img src="logomale.png" alt="Opis obrazka" width="150">
     <h1>Witaj na mojej stronie!</h1>
         <p>Jestem [Twoje Imię/Nazwisko], [Twój Zawód/Usługa].</p>
 </div>
@@ -189,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
