--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <li><a href="#about">O mnie</a></li>
                 <li><a href="#contact">Kontakt</a></li>
                 <li><a href="#dodatki">Dodatki</a></li>
-                <li><a href="blog.html">Ciekawostki</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
