--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Prosta Wizytówka (Jeden Plik)</title>
-        <link rel="shortcut icon" type="image/png" href="heart.png" />
+        <link rel="shortcut icon" type="image/png" href="/PNG/heart.png" />
     <style>
         /* Właściwość zapewniająca płynne przewijanie po kliknięciu w linki z kotwicą (#) */
         html {
@@ -146,7 +146,7 @@
 
     <section id="home" class="hero">
        <div class="image-with-text">
-    <img src="logomale.png" alt="Opis obrazka" width="150">
+    <img src="/PNG/logomale.png" alt="Opis obrazka" width="150">
     <h1>Witaj na mojej stronie!</h1>
         <p>Jestem [Twoje Imię/Nazwisko], [Twój Zawód/Usługa].</p>
 </div>
@@ -189,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
