--- a/blog.html
+++ b/blog.html
@@ -124,7 +124,7 @@
         ---
 
         <article class="blog-post">
-            <figure><center><img src="heart.png" alt="Opis obrazka (ważny dla dostępności)" width="50"></center>
+            <figure><center><img src="/PNG/heart.png" alt="Opis obrazka (ważny dla dostępności)" width="50"></center>
     <figcaption>To jest podpis pod obrazkiem, opisujący jego zawartość.</figcaption>
 </figure>
             <h3>Tytuł Wpisu 1: Jak zacząć z XYZ</h3>
