--- a/index.html
+++ b/index.html
@@ -5,130 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Prosta Wizytówka (Jeden Plik)</title>
         <link rel="shortcut icon" type="image/png" href="/PNG/heart.png" />
-    <style>
-        /* Właściwość zapewniająca płynne przewijanie po kliknięciu w linki z kotwicą (#) */
-        html {
-            scroll-behavior: smooth; 
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f4f4f4;
-        }
-
-        /* --- Nagłówek i Nawigacja --- */
-        header {
-            background: #333;
-            color: white;
-            padding: 1em 0;
-            position: sticky; /* Przyklejony na górze */
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0 auto;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-
-        nav ul li a:hover {
-            color: #ffd700; /* Złoty kolor przy najechaniu */
-        }
-
-        /* --- Sekcje Treści --- */
-        section {
-            padding: 80px 20px;
-            margin: 0 auto;
-            max-width: 1000px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-
-        /* Styl dla sekcji Hero (Strona Główna) */
-        .hero {
-            background-color: #5a5a5a;
-            color: white;
-            text-align: center;
-            padding: 150px 20px;
-        }
-
-        .hero h1 {
-            font-size: 3em;
-            margin-top: 0;
-        }
-
-        .hero p {
-            font-size: 1.2em;
-        }
-
-        /* Styl przycisku */
-        .button {
-            display: inline-block;
-            background: #ffd700;
-            color: #333;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-            font-weight: bold;
-            transition: background 0.3s;
-        }
-
-        .button:hover {
-            background: #ccb000;
-        }
-
-        /* --- Formularz Kontaktowy --- */
-        .contact-form form input[type="text"],
-        .contact-form form input[type="email"],
-        .contact-form form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            box-sizing: border-box; 
-        }
-
-        .contact-form form button {
-            background: #333;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-
-        .contact-form form button:hover {
-            background: #555;
-        }
-
-        /* --- Stopka --- */
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #333;
-            color: white;
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -189,6 +66,7 @@
 
 </body>
 </html>
+
 
 
 
